# robust_backend

./: CMakeLists.txt  README.md  rtabmap.ini
corelib/include/rtabmap/core/: Parameters.h
corelib/src/: Graph.cpp  Link.cpp  Rtabmap.cpp
corelib/src/optimizer/: OptimizerG2O.cpp  OptimizerGTSAM.cpp  betweenFactorClusterSwitchable.h
examples/: CMakeLists.txt
examples/BackendTesting/: CMakeLists.txt  main.cpp  utils.h
examples/CSAILTesting/: CMakeLists.txt  main.cpp
examples/RobustBackend/: main.cpp
guilib/include/rtabmap/gui/: PoseViewer.h  ui_DatabaseViewer.h
guilib/src/: DatabaseViewer.cpp
scripts/: analyze.sh  analyze_ate_convergence.sh  analyze_cbsc_switch_variable.sh  analyze_clustering.sh  analyze_s_value.sh  analyze_switch_variable.sh  batch_analyze_cbsc_switchable_variable.py  batch_analyze_s_value.py  batch_analyze_switchable_variable.py  batch_compare.py  batch_compare.sh  batch_compare_ate.py  batch_comparison_plot_generation.sh  batch_create_new_dataset_folder.py  batch_rm_script.py  batch_run_single_script.sh  batch_slampp_plot.sh  batch_update_script.py  batch_update_scripts.sh  clean.sh  compare.py  compare_plot_g2o.py  examine_clustering_results.py  generateDataset.py  move_to_results_folder.sh  plot.py  plot2_switch_variable.py  plot_ate_convergence.py  plot_clustering.py  plot_error.py  plot_g2o.py  plot_g2o_slampp.py  plot_g2o_with_link.py  plot_g2o_with_switch_variable.py  plot_s_value.py  plot_switch_variable.py  sort.py
tools/: CMakeLists.txt
tools/PoseViewer/: CMakeLists.txt  main.cpp
(+7 files in other folders)
